--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
+  
     sdk: flutter
 
   flutter_lints: ^4.0.0
@@ -28,6 +29,8 @@ flutter:
 
   assets:
     - assets/
+    - assets/burger/
+    - assets/ramen/
 
   # fonts:
   #   - family: Schyler
